Bug#25511   "Federated INSERT failures"   Federated does not correctly handle "INSERT...ON DUPLICATE KEY UPDATE"   However, implementing such support is not reasonably possible without   increasing complexity of the storage engine: checking that constraints   on remote server match local server and parsing error messages.   This patch causes 'ON DUPLICATE KEY' to fail with ER_DUP_KEY message   if a conflict occurs and not to fail silently.